basic_kubernetes/ingress/ingress-config.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path:
        backend:
          serviceName: np-svc
          servicePort: 80
      - path: /ip
        backend:
          serviceName: np-svc
          servicePort: 80
      - path: /your-directory
        backend:
          serviceName: np-svc
          servicePort: 80
